# cocaine-plugins

./: .gitignore  CMakeLists.txt
cmake/modules/: FindCocainePluginNode.cmake
debian/: changelog  control
elliptics/include/cocaine/: storage.hpp
elliptics/src/: service.cpp  storage.cpp
graphite/include/cocaine/: graphite.hpp
graphite/src/: graphite.cpp
logging/: CMakeLists.txt
logging/src/: logging_v2.cpp
logging/src/logging/: truncator.cpp
node/: CMakeLists.txt
node/src/: node.cpp
node/src/isolate/: external.cpp
node/src/node/: app.cpp  engine.cpp  engine.hpp  manifest.cpp  overseer.cpp  pool_observer.hpp  profile.cpp  slave.cpp  stats.cpp
unicorn/src/cluster/: unicorn.cpp
unicorn/src/service/: unicorn.cpp
uniresis/src/: uniresis.cpp
vicodyn/: CMakeLists.txt
vicodyn/include/cocaine/api/vicodyn/: balancer.hpp
vicodyn/include/cocaine/gateway/: vicodyn.hpp
vicodyn/include/cocaine/idl/: vicodyn.hpp
vicodyn/include/cocaine/vicodyn/: error.hpp  peer.hpp  request_context.hpp
vicodyn/include/cocaine/vicodyn/balancer/: simple.hpp  utils.hpp
vicodyn/include/cocaine/vicodyn/proxy/: buffer.hpp  discardable.hpp  endpoint.hpp  middlewares.hpp  protocol.hpp  proxy.hpp  safe_stream.hpp
vicodyn/src/: module.cpp
vicodyn/src/gateway/: vicodyn.cpp
vicodyn/src/vicodyn/: darkmetrics.cpp  darkmetrics.hpp  error.cpp  peer.cpp  proxy.cpp  request_context.cpp
vicodyn/src/vicodyn/balancer/: simple.cpp  utils.cpp
vicodyn/src/vicodyn/proxy/: buffer.cpp  discardable.cpp  endpoint.cpp  middlewares.cpp  proxy.cpp  safe_stream.cpp
(+30 files in other folders)
